refactor: Swagger Docs 수정 (#23)
* docs: swagger docs, JWT Token 인증 오류 해결

* docs: swagger docs, JWT Token 인증 오류 해결

* refactor: Member Domain Model, 메서드명 변경

- SetPassword() -> AssignPassword()

* feat: Domain Model 생성자 함수 구현

- member.go
- product.go
- order.go

* refactor: 회원 가입 API 수정

* docs: swagger docs 수정

* refactor: 주문 취소 API 리팩토링

- GetByOrderNumber(orderNumber string) -> GetById(id int)로 변경

* chore: etc.

* test: 주문 취소 API 리팩토링으로 인한 테스트 코드 변경

* test: 주문 생성 API 리팩토링으로 인한 테스트 코드 변경

* refactor: 주문 생성 API 리팩토링

* docs: swagger docs 수정

* refactor: 사용하지 않는 코드 제거

* refactor: 메서드명 리팩토링

- ToEntity() -> CreateToEntity()

* test: 메서드명 리팩토링에 따른 테스트 코드 변경

- ToEntity() -> CreateToEntity()

* chore: etc.

* docs: swagger docs 수정

* docs: swagger docs 수정

* refactor: DTO 내 Request 필드명을 가독성 있게 수정

* test: DTO 내 Request 필드명을 수정함에 따라 테스트 코드 변경

* refactor: swagger docs 주석 변경

* refactor: swagger docs default 값 설정

* docs: swagger docs 수정
