# internal/interfaces/dto/request/product_request.go
@@ -1,22 +1,28 @@
 package request
 
-import "github.com/HongJungWan/commerce-system/internal/domain"
+import (
+	"github.com/HongJungWan/commerce-system/internal/domain"
+	"github.com/google/uuid"
+)
+
+const (
+	PRODUCT = "Product"
+)
 
 type CreateProductRequest struct {
-	ProductNumber string `json:"product_number"`
-	ProductName   string `json:"product_name"`
-	Category      string `json:"category"`
-	Price         int64  `json:"price"`
-	StockQuantity int    `json:"stock_quantity"`
+	ProductName   string `json:"product_name" example:"pizza"`
+	Category      string `json:"category" example:"food"`
+	Price         int64  `json:"price" example:"1000"`
+	StockQuantity int    `json:"stock_quantity" example:"100"`
 }
 
 type UpdateStockRequest struct {
-	StockQuantity int `json:"stock_quantity"`
+	StockQuantity int `json:"stock_quantity" example:"77"`
 }
 
-func (req *CreateProductRequest) ToEntity() (*domain.Product, error) {
+func (req *CreateProductRequest) CreateToEntity() (*domain.Product, error) {
 	product := &domain.Product{
-		ProductNumber: req.ProductNumber,
+		ProductNumber: PRODUCT + uuid.New().String(),
 		ProductName:   req.ProductName,
 		Category:      req.Category,
 		Price:         req.Price,
